fix navbar for items to align right

--- a/client/src/components/Shared/Nav/Nav.css
+++ b/client/src/components/Shared/Nav/Nav.css
@@ -1,15 +1,22 @@
 .nav-section {
   background-color: #324652;
+  display: flex !important;
 }
-
 
 .page-logo{
   color: #FFFFFF !important;
+  margin-left: 5%;
 }
 
 .nav-tabs{
   color: #FFFFFF !important;
   border: none !important;
+  margin-left: 30px;
+}
+
+#basic-navbar-nav{
+  flex-direction: row-reverse; 
+  margin-right: 5%;
 }
 
 .welcome-msg{
@@ -19,3 +26,4 @@
 .toggle{
   background-color: white !important;
 }
+
